--- a/.env.example
+++ b/.env.example
@@ -19,5 +19,6 @@ JWT_ACCESS_TOKEN_EXPIRE_MINUTES="900"
 
 ## GCP section
 GOOGLE_APPLICATION_CREDENTIALS="./svitbo-example.json"
+GCP_STORAGE_API_PREFIX="https://storage.googleapis.com"
 GCP_STATIC_BUCKET="svtibo-gcp"
 GCP_COVERS_PREFIX="covers"
