Reflect CORS changes

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ MARIADB_PORT="3306"
 ## API section
 INITIAL_ADMIN_USERNAME="kirby"
 INITIAL_ADMIN_PASSWORD="f5d7Dpha//UmPs/v"
+CORS_ORIGINS="http://localhost:4200;http://frontend:4200"
 
 ## JWT section
 JWT_SECRET_KEY="SvitkaIsTheBest"
