--- a/compose.d/compose-dev.yml
+++ b/compose.d/compose-dev.yml
@@ -8,9 +8,7 @@ services:
       - "3306:3306"
 
   adminer:
-    build:
-      context: ../
-      dockerfile: compose.d/Dockerfile.adminer
+    image: adminer:4
     container_name: adminer
     restart: unless-stopped
     ports:
