--- a/compose.d/Dockerfile.backend
+++ b/compose.d/Dockerfile.backend
@@ -1,18 +1,21 @@
 FROM python:3.12-slim AS builder
 
-RUN apt-get update && \
-    apt-get install -y \
+RUN \
+    apt update && \
+    apt install -y \
         default-libmysqlclient-dev \
-        pkg-config \
-        gcc
+        gcc \
+        pkg-config
 
 WORKDIR /app
 
 COPY requirements.txt .
 
-RUN python3 -m venv venv && \
+RUN python3 -m venv venv
+
+RUN --mount=type=cache,target=/root/.cache/pip \
     . venv/bin/activate && \
-    pip install --no-cache-dir -r requirements.txt
+    pip install -r requirements.txt
 
 # Final image to build
 FROM python:3.12-slim
