--- a/compose.d/Dockerfile.backend
+++ b/compose.d/Dockerfile.backend
@@ -26,14 +26,7 @@ WORKDIR /app
 
 COPY --from=builder /app/venv ./venv
 
-COPY \
-    .env \
-    alembic* \
-    app \
-    compose.d/entrypoint.sh
-    requirements.txt
-    svitbo*
-    .
+COPY . . 
 
 EXPOSE 8000
 
